sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value l
  l=getNombreValeurs()
  ^AlgBubbleSort1:4: error: not found: value l
  for (i<-0 to l-2) {
               ^