sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  l=getNombreValeurs()
  for (i<-0 to l-2) {
 if (plusPetit(i+1,i)==true) {
   echange(i+1,i);
 } }
}